<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: Weather texts -->

    <string name="app_name">ChillWeather</string>
    <string name="air_quality">Air Quality</string>
    <string name="aqi_value">AQI Index</string>
    <string name="pm2_5_value">PM2.5 Index</string>
    <string name="forecast_string">Forecast</string>
    <string name="life_suggestion">Life Suggestion</string>
    <string name="city_manage">City Management</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="major">Main</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="location">LOCATION</string>
    <string name="sun_duration">Sunshine Period</string>
    <string name="sun_rise">Sunrise</string>
    <string name="sun_set">Sunset</string>
    <string name="search">Search</string>
    <string name="background_pic">backgroundPic</string>
    <string name="mal_title_about">About</string>
    <string name="weather_info">Weather Info</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="wind">Wind</string>
    <string name="wind_direction">Wind Dirc</string>
    <string name="wind_power">Wind Power</string>
    <string name="humidity">Humidity</string>
    <string name="not_searched_this_city">DID NOT FIND THE CITY.</string>
    <string name="you_must_allow_all_permissions">You must allow all permissions to run the app.</string>
    <string name="unknown_errors">Unknown errors.</string>
    <string name="choose_city">Select city</string>
    <string name="located_success_and_tap_to_change">LOCATED SUCCESS.</string>
    <string name="located_failed">Located failed</string>
    <string name="failed_to_acquire_weather_info">Failed to acquire weather info</string>
    <string name="tap_again_to_quit">Tap again to quit</string>
    <string name="can_not_locate">Unable to locate</string>
    <string name="check_update">Check Update</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="recycler_no_data_text">No data</string>
    <string name="undo_text">Redo</string>
    <string name="add_city">ADD CITY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="customize_bg">Customize background picture</string>
    <string name="city_removed">CITY HAS REMOVED.</string>
    <string name="move_success">MOVED SUCCESS</string>
    <string name="on_locating">Locating……</string>
    <string name="off">Off</string>
    <string name="on_checking">Checking……</string>
    <string name="tap_to_add_city">Add cities by tapping lower right.</string>
    <string name="negative_button">Cancel</string>
    <string name="positive_button">OK</string>
    <string name="neutral_button">Ignore</string>
    <string name="thirty_minutes">30 Minutes</string>
    <string name="one_hour">1 Hour</string>
    <string name="two_hours">2 Hours</string>
    <string name="three_hours">3 Hours</string>
    <string name="settings_notification_bar">Notification</string>
    <string name="settings_on_notification">Resident notification bar</string>
    <string name="settings_weather_notify">Weather information notification(Coding)</string>
    <string name="settings_background_task">Background Services</string>
    <string name="settings_refresh_weather_background">Refresh weather information in background</string>
    <string name="settings_custom">Custom</string>
    <string name="settings_auto_update_check">Auto check updates</string>
    <string name="settings_bing_pic">Bing image daily</string>
    <string name="settings_change_heweather_api">Change HeWeather API Key</string>
    <string name="settings_change_heweather_api_hint">Never mind if don\'t know what it is.</string>

</resources>
