<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_notification_bar">

        <SwitchPreference
            android:key="on_notification_switch"
            android:title="@string/settings_on_notification"
            android:summaryOn="On"
            android:summaryOff="Off" />

        <SwitchPreference
            android:key="day_night_weather_switch"
            android:title="@string/settings_weather_notify"
            android:summaryOn="On"
            android:summaryOff="Off"/>

        <SimpleMenuPreference
            android:key="day_weather_time_drop_down"
            android:title="早晨通知时间（施工中）"
            android:summary="%s"
            android:enabled="false"
            android:shouldDisableView="true"/>

        <SimpleMenuPreference
            android:key="night_weather_time_drop_down"
            android:title="傍晚通知时间（施工中）"
            android:summary="%s"
            android:enabled="false"
            android:shouldDisableView="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_background_task">

        <SwitchPreference
            android:key="refresh_background_switch"
            android:title="@string/settings_refresh_weather_background"
            android:summaryOn="On"
            android:summaryOff="Off" />


        <SimpleMenuPreference
            android:key="refresh_freq_drop_down"
            android:title="刷新频率"
            android:summary="%s"
            android:enabled="false"
            android:shouldDisableView="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_custom">

        <SwitchPreference
            android:key="auto_update_check"
            android:title="@string/settings_auto_update_check"
            android:summaryOn="On"
            android:summaryOff="Off"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="bing_update_switch"
            android:title="@string/settings_bing_pic"
            android:summaryOn="On"
            android:summaryOff="Off"
            android:defaultValue="true"/>

        <EditTextPreference
            android:key="change_weather_api_edit_text"
            android:title="@string/settings_change_heweather_api"
            android:summary="%s"
            android:hint="@string/settings_change_heweather_api_hint"
            android:singleLine="true"/>

    </PreferenceCategory>

</PreferenceScreen>