<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sun="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_sun_rise_set"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/bg_border"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/sun_duration"
        android:textColor="#fff"
        android:textSize="20sp" />

    <com.absinthe.chillweather.view.SunView
        android:id="@+id/sun_view"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        sun:svMainColor="#FE8109"
        sun:svTrackColor="#FE8109"
        sun:svSunColor="#FED300"
        sun:svSunRadius="9dp"
        sun:svTrackWidth="1dp"
        sun:svTextSize="10sp"
        sun:svTextOffset="20dp"
        sun:svPadding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_sun_rise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sun_rise"
                    android:textColor="#fff" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_sun_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sun_set"
                    android:textColor="#fff" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>